# CommonAssessmentTool

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  back_end.pem  code_quality_README.md  docker-compose.yml  entrypoint.sh  initialize_data.py  mypy.ini  pyproject.toml  requirements-dev.txt  sprint2_README.md  sprint3_README.md
.github/workflows/: cd.yml  ci.yml
app/: database.py  enums.py  main.py  models.py  validators.py
app/auth/: router.py
app/clients/: router.py  schema.py
app/clients/service/: client_service.py  logic.py  model.py
app/ml/: __init__.py  base_model.py  data_processor.py  model_registry.py  router.py  test_models.py
app/ml/models/: __init__.py  gradient_boost.py  linear_regression.py  random_forest.py
app/models/: __init__.py  client.py  relationships.py  user.py
tests/: conftest.py  test_auth.py  test_clients.py
