[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | \.env
    | \.eggs
    | \.mypy_cache
    | \.pytest_cache
)/
'''

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "common-assessment-tool"
version = "0.1.0"
description = "A FastAPI application for managing assessments."
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.22"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"
flake8 = "^3.9"
mypy = "^0.910"



